[package]
name = "bevy_game_jam_3"
version = "0.1.0"
publish = false
authors = ["Askor"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version = "0.10" }
bevy_asset_loader = { version = "0.15" }
rand = { version = "0.8.3" }
bevy_rapier3d = "*"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
